Integer ctor